--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
+@font-face {
+    font-family: 'Yekan';
+    src:	url('./Font/Yekan-Font-3.0/Yekan.eot'); /* IE9 Compat Modes */
+    src:	url('./Font/Yekan-Font-3.0/Yekan.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+            url('./Font/Yekan-Font-3.0/Yekan.woff2') format('woff2'), /* Modern Browsers */
+            url('./Font/Yekan-Font-3.0/Yekan.woff') format('woff'), /* Modern Browsers */
+            url('./Font/Yekan-Font-3.0/Yekan.otf') format('opentype'), /* Open Type Font */	
+            url('./Font/Yekan-Font-3.0/Yekan.ttf') format('truetype'); /* Safari, Android, iOS */
+    font-weight: normal;
+    font-style: normal;
+    text-rendering: optimizeLegibility;
+    font-display: auto;
+}
+
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Yekan" !important;
 }
 
 .header {
@@ -24,11 +38,14 @@
     color: #ffffff;
     padding: 5px;
     text-decoration: none;
+    position: relative;
+    right: 5px;
 }
 .logo-name {
     color: #ffffff;
     display: flex;
     align-items: center;
+    padding-left: 8px;
 }
 
 body {
