--- a/style/style.css
+++ b/style/style.css
@@ -97,3 +97,17 @@ main {
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgb(220, 240, 184);
 }
+.img-social {
+    width: 50px;
+    height: 50px;
+}
+.img-social:hover{
+    box-shadow: 0px 1px 5px black;
+}
+.img-media > ul{
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 20px;
+    justify-content: space-between;
+}
